tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_count_mismatch_two_to_three.fg
/; EXPECT_ERROR: AssignmentExpressionCountMismatch
var x:int = 10
var y:int = 20
x, y = 30, 40, 50

